.python_history
from apps.models import RegistroOcorrenciaAluno
# Ver as últimas ocorrências
ultimas = RegistroOcorrenciaAluno.objects.all().order_by('-id')[:10]
for occ in ultimas:
    print(f"ID: {occ.id} | Aluno: {occ.aluno.nome} | Turno: {occ.turno} | Tipo: {occ.tipo_ocorrencia} | Data: {occ.data}")
from django.utils import timezone
# Ver o mês atual no sistema
print(f"Mês atual: {timezone.now().month}")
print(f"Ano atual: {timezone.now().year}")
# Ver as faltas que você cadastrou
from datetime import datetime
faltas_tarde = RegistroOcorrenciaAluno.objects.filter(
    turno='tarde',
    tipo_ocorrencia='falta',
    data__year=2026,
    data__month=4
)
print(f"Total faltas tarde em abril/2026: {faltas_tarde.count()}")
from apps.models import RegistroOcorrenciaAluno
from django.utils import timezone
# Simular o que o gráfico faz
mes = 4
ano = 2026
ocorrencias = RegistroOcorrenciaAluno.objects.filter(
    faltou=True,
    data__year=ano,
    data__month=mes
)
print(f"Total de faltas no filtro do gráfico: {ocorrencias.count()}")
for occ in ocorrencias:
    print(f"ID: {occ.id} | Turno: {occ.turno} | Aluno: {occ.aluno.nome}")
# Ver as 5 faltas que você cadastrou
faltas_tarde = RegistroOcorrenciaAluno.objects.filter(
    turno='tarde',
    tipo_ocorrencia='falta',
    data__year=2026,
    data__month=4
)
for falta in faltas_tarde:
    print(f"Aluno: {falta.aluno.nome}")
    print(f"  Turno da ocorrência: {falta.turno}")
    print(f"  Turno da turma: {falta.aluno.turma.turno}")
    print(f"  Turma: {falta.aluno.turma.nome}")
    print("---")
from apps.models import RegistroOcorrenciaAluno
from collections import defaultdict
mes = 4
ano = 2026
ocorrencias = RegistroOcorrenciaAluno.objects.filter(
    faltou=True,
    data__year=ano,
    data__month=mes
)
faltas_manha = 0
faltas_tarde = 0
for occ in ocorrencias:
    if occ.turno == 'manha':
        faltas_manha += 1
    elif occ.turno == 'tarde':
        faltas_tarde += 1
print(f"Faltas Manhã (pelo campo turno): {faltas_manha}")
print(f"Faltas Tarde (pelo campo turno): {faltas_tarde}")
# Verificar as turmas da tarde
from apps.models import Turma
turmas_tarde = Turma.objects.filter(turno='tarde')
for turma in turmas_tarde:
    print(f"Turma: {turma.nome} - Turno: {turma.turno}")
python
# Verificar faltas por turma no período da tarde
from apps.models import RegistroOcorrenciaAluno
faltas_tarde = RegistroOcorrenciaAluno.objects.filter(
    turno='tarde',
    faltou=True,
    data__year=2026,
    data__month=4
).select_related('aluno__turma')
for falta in faltas_tarde:
    print(f"Turma: {falta.aluno.turma.nome} - Aluno: {falta.aluno.nome}")
# Verificar as turmas da tarde
from apps.models import Turma
turmas_tarde = Turma.objects.filter(turno='tarde')
for turma in turmas_tarde:
    print(f"Turma: {turma.nome} - Turno: {turma.turno}")
 # Verificar as turmas da tarde
>>> from apps.models import Turma
>>> 
>>> turmas_tarde = Turma.objects.filter(turno='tarde')
>>> for turma in turmas_tarde:
...     print(f"Turma: {turma.nome} - Turno: {turma.turno}")
... python
  File "<console>", line 3
    python
    ^^^^^^
SyntaxError: incomplete input
>>> # Verificar faltas por turma no período da tarde
>>> from apps.models import RegistroOcorrenciaAluno
>>> 
>>> faltas_tarde = RegistroOcorrenciaAluno.objects.filter(
...     turno='tarde',
...     faltou=True,
...     data__year=2026,
...     data__month=4
... ).select_related('aluno__turma')
>>> 
>>> for falta in faltas_tarde:
...     print(f"Turma: {falta.aluno.turma.nome} - Aluno: {falta.aluno.nome}")
... # Verificar as turmas da tarde
... from apps.models import Turma
  File "<console>", line 4
    from apps.models import Turma
    ^^^^
SyntaxError: invalid syntax
>>> 
>>> turmas_tarde = Turma.objects.filter(turno='tarde')
>>> for turma in turmas_tarde:
...     print(f"Turma: {turma.nome} - Turno: {turma.turno}")
... 
from apps.models import Turma
turmas_tarde = Turma.objects.filter(turno='tarde')
for turma in turmas_tarde:
    print(f"Turma: {turma.nome} - Turno: {turma.turno}")
from apps.models import RegistroOcorrenciaAluno
faltas_tarde = RegistroOcorrenciaAluno.objects.filter(turno='tarde', faltou=True, data__year=2026, data__month=4).select_related('aluno__turma')
for falta in faltas_tarde:
    print(f"Turma: {falta.aluno.turma.nome} - Aluno: {falta.aluno.nome}")
from apps.models import Turma
turmas_tarde = Turma.objects.filter(turno='tarde')
for turma in turmas_tarde:
    print(f"Turma: {turma.nome} - Turno: {turma.turno}")
from apps.models import RegistroOcorrenciaAluno
faltas_tarde = RegistroOcorrenciaAluno.objects.filter(turno='tarde', faltou=True, data__year=2026, data__month=4).select_related('aluno__turma')
for falta in faltas_tarde:
    print(f"Turma: {falta.aluno.turma.nome} - Aluno: {falta.aluno.nome}")
7
exit()
from django.contrib.auth.models import User
user = User.objects.get(username='NOME_DO_DIGITADOR')
print(user.groups.all())
from django.contrib.auth.models import User
user = User.objects.get(username='NOME_DO_DIGITADOR')user = User.objects.get(username='beatriz')
user = User.objects.get(username='NOME_DO_DIGITADOR')
from django.contrib.auth.models import User
for u in User.objects.all():
    print(u.username, u.groups.all())
tail -n 50 /var/log/gestaoluizzanchim.pythonanywhere.com.error.log
exit()
from apps.models import RegistroOcorrenciaAluno
atrasos = RegistroOcorrenciaAluno.objects.filter(tipo_ocorrencia='atraso').order_by('-id')[:10]
for a in atrasos:
    print(f"ID: {a.id} | Aluno: {a.aluno.nome} | faltou: {a.faltou}")
from apps.models import RegistroOcorrenciaAluno
# Faltas (faltou=True) - são as que DEVERIAM estar na Busca Ativa
faltas = RegistroOcorrenciaAluno.objects.filter(
    data='2026-04-16',
    faltou=True
)
print(f"✅ FALTAS no banco (16/04): {faltas.count()}")
# Atrasos (tipo_ocorrencia='atraso') - NÃO deveriam estar na Busca Ativa
atrasos = RegistroOcorrenciaAluno.objects.filter(
    data='2026-04-16',
    tipo_ocorrencia='atraso'
)
print(f"⏰ ATRASOS no banco (16/04): {atrasos.count()}")
# Total
total = RegistroOcorrenciaAluno.objects.filter(data='2026-04-16')
print(f"📊 TOTAL no banco (16/04): {total.count()}")
cd /home/gestaoluizzanchim
workon colegioenv
python manage.py makemigrations
python manage.py migrate
exit()
from apps.models import Aluno
sem_telefone = Aluno.objects.filter(telefone='')
print(f"Alunos sem telefone: {sem_telefone.count()}")
python importar_alunos.py
workon colegioenv
exit()
from apps.models import RegistroOcorrenciaAluno
# Busca as faltas dos dias 17, 21, 22, 23 de abril de 2026
dias = [17, 21, 22, 23]
for dia in dias:
    faltas = RegistroOcorrenciaAluno.objects.filter(
        data__day=dia,
        data__month=4,
        data__year=2026
    )
    print(f"\n=== Dia {dia}/04/2026: {faltas.count()} ocorrências ===")
    for occ in faltas:
        print(f"  Aluno: {occ.aluno.nome}")
        print(f"  Tipo: {occ.tipo_ocorrencia}")
        print(f"  Faltou: {occ.faltou}")
        print(f"  Turno: '{occ.turno}'")
        print(f"  Registrado por: {occ.registrado_por}")
        print("  ---")
from apps.models import RegistroOcorrenciaAluno
# Corrige todas as faltas onde tipo_ocorrencia = 'falta' mas faltou = False
faltas_erradas = RegistroOcorrenciaAluno.objects.filter(
    tipo_ocorrencia='falta',
    faltou=False
)
print(f"Total de faltas com erro: {faltas_erradas.count()}")
for occ in faltas_erradas:
    occ.faltou = True
    occ.save()
print("✅ Todas as faltas foram corrigidas!")
cd ~/colegio/media
ls -lah
exit()
